[package]
name = "simple"
version = "0.1.50"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-2 = { path = "../llama-cpp-2", version = "0.1.50" }
hf-hub = { workspace = true }
clap = { workspace = true , features = ["derive"] }
anyhow = { workspace = true }
encoding_rs = { workspace = true }

[features]
cublas = ["llama-cpp-2/cublas"]
metal =  ["llama-cpp-2/metal"]

[lints]
workspace = true
