[package]
name = "mtmd"
version = "0.1.86"
edition = "2021"

[dependencies]
llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.86" }
clap = { workspace = true, features = ["derive"] }
# hf-hub = { workspace = true }
# anyhow = { workspace = true }
# encoding_rs = { workspace = true }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[lints]
workspace = true

[[example]]
name = "mtmd"
path = "src/mtmd.rs"
