[package]
name = "reranker"
version = "0.1.86"
edition = "2021"
publish = false

[dependencies]
llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.86" }
hf-hub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
encoding_rs = { workspace = true }

[features]
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[lints]
workspace = true
