[package]
name = "usage"
version = "0.1.69"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama-cpp-2 = { path = "../../llama-cpp-2", version = "0.1.69" }
encoding_rs = { workspace = true }

[features]
cuda = ["llama-cpp-2/cuda"]
metal =  ["llama-cpp-2/metal"]
native = ["llama-cpp-2/native"]
vulkan = ["llama-cpp-2/vulkan"]

[lints]
workspace = true
